# apps/api/gen/models/daily_breakdown_item.go
@@ -1,0 +1,150 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// DailyBreakdownItem A single daily value entry within a monthly breakdown
+//
+// swagger:model DailyBreakdownItem
+type DailyBreakdownItem struct {
+
+	// booking count
+	BookingCount int64 `json:"booking_count,omitempty"`
+
+	// Break time in minutes
+	BreakTime int64 `json:"break_time,omitempty"`
+
+	// employee id
+	// Format: uuid
+	EmployeeID strfmt.UUID `json:"employee_id,omitempty"`
+
+	// error codes
+	ErrorCodes []string `json:"error_codes"`
+
+	// First clock-in time (HH:MM)
+	FirstCome *string `json:"first_come,omitempty"`
+
+	// Gross work time in minutes
+	GrossTime int64 `json:"gross_time,omitempty"`
+
+	// has error
+	HasError bool `json:"has_error,omitempty"`
+
+	// id
+	// Format: uuid
+	ID strfmt.UUID `json:"id,omitempty"`
+
+	// Last clock-out time (HH:MM)
+	LastGo *string `json:"last_go,omitempty"`
+
+	// Net work time in minutes
+	NetTime int64 `json:"net_time,omitempty"`
+
+	// Overtime in minutes
+	Overtime int64 `json:"overtime,omitempty"`
+
+	// Target work time in minutes
+	TargetTime int64 `json:"target_time,omitempty"`
+
+	// Undertime in minutes
+	Undertime int64 `json:"undertime,omitempty"`
+
+	// value date
+	// Format: date
+	ValueDate strfmt.Date `json:"value_date,omitempty"`
+
+	// warnings
+	Warnings []string `json:"warnings"`
+}
+
+// Validate validates this daily breakdown item
+func (m *DailyBreakdownItem) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateEmployeeID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateValueDate(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *DailyBreakdownItem) validateEmployeeID(formats strfmt.Registry) error {
+	if swag.IsZero(m.EmployeeID) { // not required
+		return nil
+	}
+
+	if err := validate.FormatOf("employee_id", "body", "uuid", m.EmployeeID.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *DailyBreakdownItem) validateID(formats strfmt.Registry) error {
+	if swag.IsZero(m.ID) { // not required
+		return nil
+	}
+
+	if err := validate.FormatOf("id", "body", "uuid", m.ID.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *DailyBreakdownItem) validateValueDate(formats strfmt.Registry) error {
+	if swag.IsZero(m.ValueDate) { // not required
+		return nil
+	}
+
+	if err := validate.FormatOf("value_date", "body", "date", m.ValueDate.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this daily breakdown item based on context it is used
+func (m *DailyBreakdownItem) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *DailyBreakdownItem) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *DailyBreakdownItem) UnmarshalBinary(b []byte) error {
+	var res DailyBreakdownItem
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
